@@ -24,7 +24,6 @@ import org.jetbrains.annotations.Nullable;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public final class Events {
 
@@ -41,7 +40,7 @@ public final class Events {
      * @return The fired (non-null) events
      */
     public static List<Event> getFiredEvents(Event... events) {
-        return Arrays.stream(events).filter(Objects::nonNull).collect(Collectors.toList());
+        return Arrays.stream(events).filter(Objects::nonNull).toList();
     }
 
     /**
