@@ -22,7 +22,6 @@ import org.dockbox.hartshorn.server.minecraft.item.storage.MinecraftItems;
 
 import java.util.Collection;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /** Represents an inventory UI */
 public interface Inventory {
@@ -74,7 +73,7 @@ public interface Inventory {
      * @return All items which match the given filter.
      */
     default Collection<Item> findMatching(Predicate<Item> filter) {
-        return this.getAllItems().stream().filter(filter).collect(Collectors.toList());
+        return this.getAllItems().stream().filter(filter).toList();
     }
 
     /**
